--- a/gui/calc.css
+++ b/gui/calc.css
@@ -1,4 +1,7 @@
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css');
+body {
+        overflow:hidden
+}
 .calculator{
 	height:auto;
 	padding:15px;
